--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "cors": "^2.8.5",
     "hls.js": "^1.5.20",
     "ionicons": "^7.0.0",
+    "marked": "^15.0.7",
+    "ngx-markdown": "^19.1.1",
     "rxjs": "~7.8.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
