--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "ngx-markdown": "^19.1.1",
     "rxjs": "~7.8.0",
     "simple-peer": "^9.11.1",
-    "socket.io-client": "^4.8.1",
+    "socket.io-client": "^4.7.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -55,6 +55,7 @@
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/simple-peer": "^9.11.8",
+    "@types/socket.io-client": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.16.0",
