--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "Agri_Assist",
   "integrations": {
     "cordova": {}
   },
@@ -7,7 +7,7 @@
   "proxies": [
     {
       "path": "/api",
-      "proxyUrl": "http://localhost:5000"
+      "proxyUrl": "http://192.168.1.90:5000"
     }
   ]
 }
