--- a/package.json
+++ b/package.json
@@ -31,13 +31,18 @@
     "@ionic/angular": "^8.5.1",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
-    "hls.js": "^1.5.20",
+    "flv.js": "^1.6.2",
+    "hls.js": "^1.6.1",
     "ionicons": "^7.0.0",
+    "lamejs": "^1.2.1",
     "marked": "^15.0.7",
     "ngx-markdown": "^19.1.1",
+    "process": "^0.11.10",
     "rxjs": "~7.8.0",
     "simple-peer": "^9.11.1",
-    "socket.io-client": "^4.7.5",
+    "socket.io-client": "^4.8.1",
+    "stream": "^0.0.3",
+    "stream-browserify": "^3.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -48,7 +53,7 @@
     "@angular-eslint/eslint-plugin-template": "^19.0.0",
     "@angular-eslint/schematics": "^19.0.0",
     "@angular-eslint/template-parser": "^19.0.0",
-    "@angular/cli": "^19.0.0",
+    "@angular/cli": "^19.2.6",
     "@angular/compiler-cli": "^19.0.0",
     "@angular/language-service": "^19.0.0",
     "@capacitor/cli": "7.1.0",
@@ -69,7 +74,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.3"
+    "typescript": "~5.8.2"
   },
   "description": "An Ionic project"
 }
